--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   <script type="importmap">
 {
   "imports": {
-    "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.4.2",
-    "@react-three/drei": "https://esm.sh/@react-three/drei@^10.7.7",
+    "react": "https://esm.sh/react@^19.2.2",
     "react-dom/": "https://esm.sh/react-dom@^19.2.2/",
     "react/": "https://esm.sh/react@^19.2.2/",
-    "react": "https://esm.sh/react@^19.2.2",
     "three": "https://esm.sh/three@^0.182.0",
+    "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.4.2",
     "@react-three/postprocessing": "https://esm.sh/@react-three/postprocessing@^3.0.4",
-    "postprocessing": "https://esm.sh/postprocessing@^6.38.0"
+    "postprocessing": "https://esm.sh/postprocessing@^6.38.0",
+    "@react-three/drei": "https://esm.sh/@react-three/drei@^10.7.7"
   }
 }
 </script>
